--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-twothird">
       <h5 class="w3-padding-32">Greetings to all!</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I have two amusing and adorable cats and love to eat, craft, read, and learn new things.
+        Course: MODE 4201
+        Description: This course will investigate the different mobile architectures across various platforms. Students will learn about the concepts, tools, and techniques that are used to create mobile apps. 
+        Students will also create mobile apps covering native and hybrid architectures using tools that are easily available.</p>
     </div>
 
     <div class="w3-third w3-center">
