--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h5 class="w3-padding-32">Greetings to all!</h5>
 
       <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I have two amusing and adorable cats and 
-        love to eat, craft, read, and learn new things.</p> 
-      <p>Course: MODE 4201</p><br/>
-      <p>Description: This course will investigate the different mobile architectures across various platforms. Students will learn 
+        love to eat, craft, read, and learn new things.<br/> 
+      Course: MODE 4201<br/>
+      Description: This course will investigate the different mobile architectures across various platforms. Students will learn 
         about the concepts, tools, and techniques that are used to create mobile apps. Students will also create mobile apps covering 
         native and hybrid architectures using tools that are easily available.</p>
     </div>
