--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
+<title>Sara Bhatti</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -48,7 +48,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h5 class="w3-padding-32">Greetings to all!</h5>
 
       <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I have two amusing and adorable cats and 
-        love to eat, craft, read, and learn new things.<br/> 
+        love to eat, craft, read, and learn new things.<br/><br/> 
       Course: MODE 4201<br/>
       Description: This course will investigate the different mobile architectures across various platforms. Students will learn 
         about the concepts, tools, and techniques that are used to create mobile apps. Students will also create mobile apps covering 
