updating some text

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Welcome</h1>
  
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
+  <!-- <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button> -->
 </header>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h5 class="w3-padding-32">Greetings to all!</h5>
+      <h4 class="w3-padding-32">Greetings to all!</h4>
 
-      <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I have two amusing and adorable cats and 
+      <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I am a thrid year student in programming and 
         love to eat, craft, read, and learn new things.<br/><br/> 
-      Course: MODE 4201<br/>
-      Description: This course will investigate the different mobile architectures across various platforms. Students will learn 
+      <b>Course: MODE 4201</b><br/><br/>
+      Course Description: This course will investigate the different mobile architectures across various platforms. Students will learn 
         about the concepts, tools, and techniques that are used to create mobile apps. Students will also create mobile apps covering 
         native and hybrid architectures using tools that are easily available.</p>
     </div>
@@ -69,12 +69,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
+     <!-- <h1>Lorem Ipsum</h1>
       <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
 
       <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+        laboris nisi ut aliquip ex ea commodo consequat.</p> -->
     </div>
   </div>
 </div>
