--- a/coursepage.html
+++ b/coursepage.html
@@ -11,6 +11,29 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
+  
+#classworks, #labs {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#classworks td, #classworks th, #labs td, #labs th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#classworks tr:hover {background-color: #ddd;}
+
+#classworks th, #labs th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: red;
+  color: white;
+}  
+  
+  
 </style>
 <body>
 
@@ -69,6 +92,49 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <td>Mexico</td>
   </tr>
 </table>
+<table id="labs">
+  <tr>
+    <th>Company</th>
+    <th>Description</th>
+    <th>Percent</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Berglunds snabbköp</td>
+    <td>Christina Berglund</td>
+    <td>Sweden</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+ <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+      
     </div>
 
     <div class="w3-third w3-center">
