--- a/coursepage.html
+++ b/coursepage.html
@@ -72,66 +72,66 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <p class="w3-text-grey">Classwork</p>
       <table id="classworks">
   <tr>
-    <th>Company</th>
+    <th>Classwork Number</th>
     <th>Description</th>
     <th>Percent</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Classwork 1</td>
+    <td>Android Studio</td>
+    <td>4</td>
   </tr>
   <tr>
-    <td>Berglunds snabbköp</td>
-    <td>Christina Berglund</td>
-    <td>Sweden</td>
+    <td>Classwork 2</td>
+    <td>MIT App Inventor</td>
+    <td>4</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Classwork 3</td>
+    <td>Create first app using Flutter</td>
+    <td>5</td>
   </tr>
 </table>
 <table id="labs">
   <tr>
-    <th>Company</th>
+    <th>Lab Number</th>
     <th>Description</th>
     <th>Percent</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Lab 1</td>
+    <td>Report on Mobile Development, Manufacturers, and Mobile Plans</td>
+    <td>5</td>
   </tr>
   <tr>
-    <td>Berglunds snabbköp</td>
-    <td>Christina Berglund</td>
-    <td>Sweden</td>
+    <td>Lab 2</td>
+    <td>Web Hosting, Third Part Emulator (Installation & Testing), <br/>Mobile Application Development Tool</td>
+    <td>5</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Lab 3</td>
+    <td>TBA</td>
+    <td>5</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td><td>Lab 4</td>
+    <td>TBA</td>
+    <td>5</td>
   </tr>
  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td><td>Lab 5</td>
+    <td>TBA</td>
+    <td>5</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td><td>Lab 6</td>
+    <td>TBA</td>
+    <td>5</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td><td>Lab 7</td>
+    <td>TBA</td>
+    <td>5</td>
   </tr>
 </table>
       
