--- a/coursepage.html
+++ b/coursepage.html
@@ -115,22 +115,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <td>5</td>
   </tr>
   <tr>
-    <td><td>Lab 4</td>
+    <td>Lab 4</td>
     <td>TBA</td>
     <td>5</td>
   </tr>
  <tr>
-    <td><td>Lab 5</td>
+    <td>Lab 5</td>
     <td>TBA</td>
     <td>5</td>
   </tr>
   <tr>
-    <td><td>Lab 6</td>
+    <td>Lab 6</td>
     <td>TBA</td>
     <td>5</td>
   </tr>
   <tr>
-    <td><td>Lab 7</td>
+    <td>Lab 7</td>
     <td>TBA</td>
     <td>5</td>
   </tr>
