updated projects table

--- a/coursepage.html
+++ b/coursepage.html
@@ -12,20 +12,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
   
-#classworks, #labs {
+#classworks, #labs, #projects {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-#classworks td, #classworks th, #labs td, #labs th {
+#classworks td, #classworks th, #labs td, #labs th, #projects td, #test th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
 #classworks tr:hover {background-color: #ddd;}
 
-#classworks th, #labs th {
+#classworks th, #labs th, #projects th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -136,9 +136,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   </tr>
 </table>
       <br/>
-      
-      <p>Project: TBA
-      </p>
+<table id="projects">
+  <tr>
+    <th>Project</th>
+    <th>Description</th>
+    <th>Percent</th>
+  </tr>
+  <tr>
+    <td>Project Name</td>
+    <td>TBA</td>
+    <td>30</td>
+  </tr>
+  </table>
       
     </div>
 
