--- a/coursepage.html
+++ b/coursepage.html
@@ -18,7 +18,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   width: 100%;
 }
 
-#classworks td, #classworks th, #labs td, #labs th, #projects td, #test th {
+#classworks td, #classworks th, #labs td, #labs th, #projects td, #projects th {
   border: 1px solid #ddd;
   padding: 8px;
 }
