--- a/coursepage.html
+++ b/coursepage.html
@@ -167,7 +167,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-twothird">
      <h1>Lab 2 - Mobile Application Development Tool</h1>
       <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-      <p class="w3-text-grey"> I think have to publish document for q3</p>
+      <p class="w3-text-grey"> I think have to publish document for q3   
+        <a href="Mobile Application Development Tool.htm" >Mobile Application Development Tool</a> </p>
     </div>
   </div>
 </div>
