--- a/Mobile Application Development Tool.htm
+++ b/Mobile Application Development Tool.htm
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+<title>Course Page</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
@@ -83,13 +91,45 @@ div.WordSection1
 ul
 	{margin-bottom:0cm;}
 -->
+	
+	body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
 </style>
 
 </head>
 
+	
 <body lang=EN-CA link="#0563C1" vlink="#954F72">
+	
+	
+	<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="coursepage.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Course Page</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
+  </div>
 
-<div class=WordSection1>
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="coursepage.html" class="w3-bar-item w3-button w3-padding-large">Course Page</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
+  </div>
+</div>
+	
+	<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Course Page</h1>
+	</header>
+	<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+  <div class=WordSection1>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>Question 3: Mobile Application Development Tool</span></p>
@@ -101,34 +141,34 @@ ul
 "Trebuchet MS",sans-serif'>(b)Platforms:</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>          Android: </span></p>
+"Trebuchet MS",sans-serif'>Â Â Â Â Â Â Â Â Â  Android: </span></p>
 
 <p class=MsoListParagraphCxSpFirst style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Based
 on Java &amp; XML</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Since
 Java &amp; Android are opensource can be developed on any OS</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Tools
 needed for app development are easily accessible</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Has
 SQLite which uses common SQL commands and some specific to SQLite</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>User
 Interface developed in 2 ways:</span></p>
@@ -136,8 +176,8 @@ Interface developed in 2 ways:</span></p>
 <p class=MsoListParagraphCxSpMiddle style='margin-left:115.5pt;text-indent:
 -18.0pt'><span style='font-size:12.0pt;line-height:107%;font-family:"Courier New"'>o<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span></span><span
-style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'> XML
-– things written in XML will get changed to Java objects</span></p>
+style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Â XML
+â€“ things written in XML will get changed to Java objects</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:115.5pt;text-indent:
 -18.0pt'><span style='font-size:12.0pt;line-height:107%;font-family:"Courier New"'>o<span
@@ -146,7 +186,7 @@ style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>
 Native Code</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:151.5pt;text-indent:
--18.0pt'><span style='font-size:12.0pt;line-height:107%;font-family:Wingdings'>§<span
+-18.0pt'><span style='font-size:12.0pt;line-height:107%;font-family:Wingdings'>Â§<span
 style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
 style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Buttons
 &amp; textboxes can be created by using Java native code but its easier to just
@@ -160,28 +200,28 @@ inbuilt packages to communicate with internet &amp; web services, for example
 java.net or volley library</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>          iOS: </span></p>
+"Trebuchet MS",sans-serif'>Â Â Â Â Â Â Â Â Â  iOS: </span></p>
 
 <p class=MsoListParagraphCxSpFirst style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Needs
 knowledge of Objective-C</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Swift
 languages</span></p>
 
 <p class=MsoListParagraphCxSpLast style='margin-left:79.5pt;text-indent:-18.0pt'><span
-style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Know
 C#, C++, SQLite or SQL, XML</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>          </span></p>
+"Trebuchet MS",sans-serif'>Â Â Â Â Â Â Â Â Â  </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>(c)Application Development Type : indicate the </span></p>
@@ -194,7 +234,7 @@ App, Cross-platform)</span></p>
 line-height:107%;font-family:"Trebuchet MS",sans-serif'>b.Advantages </span></p>
 
 <p class=MsoNormal style='text-indent:36.0pt'><span style='font-size:12.0pt;
-line-height:107%;font-family:"Trebuchet MS",sans-serif'>c.Disadvantages  </span></p>
+line-height:107%;font-family:"Trebuchet MS",sans-serif'>c.DisadvantagesÂ  </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>(d)Website : </span><a
@@ -209,10 +249,10 @@ and current if </span></p>
 "Trebuchet MS",sans-serif'>different)</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>(f)Release Date  </span></p>
+"Trebuchet MS",sans-serif'>(f)Release DateÂ  </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>(g)License  </span></p>
+"Trebuchet MS",sans-serif'>(g)LicenseÂ  </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>(h)Price</span></p>
@@ -245,7 +285,7 @@ used to develop </span></p>
 "Trebuchet MS",sans-serif'>system, editors, any other software needed)</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>(n)Integrated Development Environment (IDE) – does
+"Trebuchet MS",sans-serif'>(n)Integrated Development Environment (IDE) â€“ does
 it have an IDE or </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
@@ -269,7 +309,7 @@ before you can create </span></p>
 etc.)</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>(s)Uploading and Selling an App – Do you need to pay
+"Trebuchet MS",sans-serif'>(s)Uploading and Selling an App â€“ Do you need to pay
 any license fee </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
@@ -280,7 +320,7 @@ in selling an </span></p>
 "Trebuchet MS",sans-serif'>app along with the dollars and cents as a share.</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>(t)Third –party emulator which can be linked to the
+"Trebuchet MS",sans-serif'>(t)Third â€“party emulator which can be linked to the
 tool : Select an </span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
@@ -308,7 +348,36 @@ line-height:107%;font-family:"Trebuchet MS",sans-serif'>2. </span></p>
 "Trebuchet MS",sans-serif'>&nbsp;</span></p>
 
 </div>
+  </div>
+</div>
 
+
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+ </div>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
+	
 </body>
 
 </html>
