--- a/Mobile Application Development Tool.htm
+++ b/Mobile Application Development Tool.htm
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Course Page</title>
+<title>Mobile Application Development Tool</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -109,7 +109,7 @@ ul
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
     <a href="coursepage.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Course Page</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
+    <a href="Mobile Application Development Tool.htm" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Mobile Application Development Tool</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
   </div>
@@ -117,7 +117,7 @@ ul
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="coursepage.html" class="w3-bar-item w3-button w3-padding-large">Course Page</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
+    <a href="Mobile Application Development Tool.htm" class="w3-bar-item w3-button w3-padding-large">Mobile Application Development Tool</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
   </div>
