--- a/coursepage.html
+++ b/coursepage.html
@@ -166,8 +166,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
      <h1>Lab 2 - Mobile Application Development Tool</h1>
-      <p class="w3-text-grey"> I think have to publish document for q3   
-        <a href="Mobile Application Development Tool.htm" >Mobile Application Development Tool</a> </p>
+      <p class="w3-text-grey"> <a href="Mobile Application Development Tool.htm" >Mobile Application Development Tool</a> </p>
       
      <div class=WordSection1>
 
