--- a/Mobile Application Development Tool.htm
+++ b/Mobile Application Development Tool.htm
@@ -544,12 +544,23 @@ million people use this app to play games on their PCs and Macs</span></p>
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>(u)Market Share: 5.15%</span></p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%;
-font-family:"Trebuchet MS",sans-serif'>(v)Number of apps available </span></b></p>
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Trebuchet MS",sans-serif'>(v)Number of apps available:</span></p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%;
-font-family:"Trebuchet MS",sans-serif'>(w)Number of downloads/users if
-applicable</span></b></p>
+<p class=MsoListParagraphCxSpFirst style='margin-left:39.75pt;text-indent:-18.0pt'><span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Google
+Play: more than 2.7 million</span></p>
+
+<p class=MsoListParagraphCxSpLast style='margin-left:39.75pt;text-indent:-18.0pt'><span
+style='font-size:12.0pt;line-height:107%;font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>Apple
+Store: more than 3.0 million</span></p>
+
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Trebuchet MS",sans-serif'>(w)Number of downloads/users if applicable</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>(x) Any other two properties not listed above</span></p>
@@ -561,15 +572,9 @@ line-height:107%;font-family:"Trebuchet MS",sans-serif'>1. Code Completion</span
 line-height:107%;font-family:"Trebuchet MS",sans-serif'>2. Version Control
 Basics</span></p>
 
-<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Trebuchet MS",sans-serif'>&nbsp;</span></p>
-
 <p class=MsoNormal align=center style='text-align:center'><span
-style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='text-align:center'><span
-style='position:relative;z-index:251659264;left:-23px;top:34px;width:717px;
-height:35px'><img width=717 height=1
+style='position:relative;z-index:251659264;left:-143px;top:34px;width:929px;
+height:35px'><img width=929 height=1
 src="Mobile%20Application%20Development%20Tool_files/image001.png"></span><span
 style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>&nbsp;</span></p>
 
@@ -583,8 +588,9 @@ style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>Android Studio release notes &nbsp;: &nbsp; Android
-Developers. (n.d.). Retrieved from
-https://developer.android.com/studio/releases</span></p>
+Developers. (n.d.). Retrieved from </span><a
+href="https://developer.android.com/studio/releases"><span style='font-size:
+12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>https://developer.android.com/studio/releases</span></a></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>Datanyze. (n.d.). Android Studio Market Share and
@@ -600,8 +606,21 @@ href="https://developer.android.com/studio/index.html#Requirements"><span
 style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>https://developer.android.com/studio/index.html#Requirements</span></a></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Trebuchet MS",sans-serif'>Google Play Store: number of apps 2019. (n.d.).
+Retrieved from </span><a
+href="https://www.statista.com/statistics/266210/number-of-available-applications-in-the-google-play-store/"><span
+style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>https://www.statista.com/statistics/266210/number-of-available-applications-in-the-google-play-store/</span></a></p>
+
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>Meet Android Studio  :  Android Developers. (n.d.).
-Retrieved from https://developer.android.com/studio/intro</span></p>
+Retrieved from </span><a href="https://developer.android.com/studio/intro"><span
+style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>https://developer.android.com/studio/intro</span></a></p>
+
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
+"Trebuchet MS",sans-serif'>Number of apps from the Apple App Store 2019.
+(n.d.). Retrieved from </span><a
+href="https://www.statista.com/statistics/268251/number-of-apps-in-the-itunes-app-store-since-2008/"><span
+style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>https://www.statista.com/statistics/268251/number-of-apps-in-the-itunes-app-store-since-2008/</span></a></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>Support different languages and cultures &nbsp;:
@@ -611,7 +630,8 @@ style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Trebuchet MS",sans-serif'>What is Bluestacks? (2019, April 15). Retrieved from
-https://www.bluestacks.com/about-us.html</span></p>
+</span><a href="https://www.bluestacks.com/about-us.html"><span
+style='font-size:12.0pt;line-height:107%;font-family:"Trebuchet MS",sans-serif'>https://www.bluestacks.com/about-us.html</span></a></p>
 
 </div>
 
