--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-twothird">
       <h4 class="w3-padding-32">Greetings to all!</h4>
 
-      <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I am a thrid year student in programming and 
+      <p class="w3-text-grey">My name is Sara and this is the welcome page for my MODE Lab. I am a third year student in programming and 
         love to eat, craft, read, and learn new things.<br/><br/> 
       <b>Course: MODE 4201</b><br/><br/>
       Course Description: This course will investigate the different mobile architectures across various platforms. Students will learn 
