--- a/coursepage.html
+++ b/coursepage.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   padding: 8px;
 }
 
-#classworks tr:hover {background-color: #ddd;}
+#classworks, #labs, #projects tr:hover {background-color: #ddd;}
 
 #classworks th, #labs th, #projects th {
   padding-top: 12px;
