--- a/coursepage.html
+++ b/coursepage.html
@@ -24,6 +24,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 }
 
 #classworks tr:hover {background-color: #ddd;}
+ 
+#labs tr:hover {background-color: #ddd;}
+  
+#projects tr:hover {background-color: #ddd;}
 
 #classworks th, #labs th, #projects th {
   padding-top: 12px;
